pr comments